Casi terminada solo faltan mas fotos de cada tipo de imbermeabilizante

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Trabajos de albañileria, pintura, remodelacion y acabados de la mejor calidad, en todo toluca y sus alrededores, precios bajos y profesionales">
     <meta name="keywords" content="albañileria,remodelacion, texuras,desplantes,decorado,escaleras,ampliacion,contruccion,cisternas,pintura">
-    <title>Impermiabilizando</title>
+    <title>Impermeabilizando</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 
@@ -24,14 +24,14 @@
         <div class="centrado">
             <nav>
                 <div class="logo">
-                    <a href="#">Impermiabilizando</a>
+                    <a href="#">Impermeabilizando</a>
                 </div>
                 <div class="nav">
 
                     <ul>
                         <li><a href="#">Inicio</a></li>
                         <li><a href="#calidad">Nosotros</a></li>
-                        <li><a href="#servicios">Servicios</a></li>
+                        <li><a href="#servicios">Impermeabilizantes</a></li>
                         <li><a href="#contacto">Contacto</a></li>
                     </ul>
                 </div>
@@ -50,7 +50,7 @@
                             <li><a href="#">Inicio</a></li>
 
                             <li><a href="#calidad">Nosotros</a></li>
-                            <li><a href="#servicios">Servicios</a></li>
+                            <li><a href="#servicios">Impermeabilizantes</a></li>
                             <li><a href="#contacto">Contacto</a></li>
 
                         </ul>
@@ -69,7 +69,7 @@
         <i class="fa fa-whatsapp my-float"></i>
     </a>
     <div class="contenedor-banner">
-        <H1>Impermiabilizando tu casa con la mejor calidad</H1>
+        <H1>Impermeabilizando tu inmueble<br>con la mejor calidad</H1>
     </div>
 
 
@@ -99,85 +99,84 @@
         </div>
 
         <div id="servicios" class="titulo">
-            <h2 class="animacion-arriba">servicios</h2>
+            <h2 class="animacion-arriba">Tipos de impermeabilizantes</h2>
         </div>
 
         <div class="contenedor-serv">
             <div class="contenedor-servicios">
                 <div class="servicios">
-                    <h3>Construcción</h3>
+                    <h3>Asfálticos</h3>
                     <div class="servicios-img">
-                        <img class="amp" src="img/construccion2.jpeg" alt="construyendo cisterna">
+                        <img class="amp" src="img/impermeabilizacion (1).jpeg" alt="construyendo cisterna">
                     </div>
-                    <p>Materializa esa idea que siempre haz tenido en mente o haz realidad tu sueño, realizamos cualquier tipo de construcción .</p>
-                    <button class="btn"><a href="https://wa.link/zrlr2n" target="_blank">Cotizar</a></button>
-                </div>
+                    <p>Ofrecen una gran durabilidad, es de fácil aplicación y apenas requieren de mantenimiento. Son muy resistentes a la luz solar y, además, pueden reforzarse con una membrana de poliéster.</p>
 
+                </div>
+                <button class="btn"><a href="https://wa.link/ad5bet" target="_blank">Cotizar</a></button>
             </div>
 
             <div class="contenedor-servicios">
                 <div class="servicios">
-                    <h3>Remodelación</h3>
+                    <h3>Acrílicos</h3>
                     <div class="servicios-img">
-                        <img class="amp" src="img/remodelacion.jpeg" alt="foto de trabajo de pintura">
+                        <img class="amp" src="img/impermeabilizacion (3).jpeg" alt="foto de trabajo de pintura">
                     </div>
-                    <p>Dale otro vista tu hogar u oficína, remodelamos lo que nos indiques, ya sea en ek inerior o exterior no dudes en pedir tu cotización. </p>
-                    <button class="btn"><a href="https://wa.link/zrlr2n" target="_blank">Cotizar</a></button>
-                </div>
+                    <p>Fabricados con resinas, pigmentos y componentes cerámicos, son muy fáciles de aplicar y se pueden utilizar sin membrana de refuerzo. Otras de sus grandes ventajas es su excelente elasticidad, por lo que no habrá riesgo; no se cuartea
+                        ni fisura.</p>
 
+                </div>
+                <button class="btn"><a href="https://wa.link/ad5bet" target="_blank">Cotizar</a></button>
             </div>
 
             <div class="contenedor-servicios">
                 <div class="servicios">
-                    <h3>Ampliación</h3>
+                    <h3>Cementosos</h3>
                     <div class="servicios-img">
-                        <img class="amp" src="img/ampliacion.jpeg" alt="foto de trabajo de texturas">
+                        <img class="amp" src="img/impermeabilizacion (2).jpeg" alt="foto de trabajo de texturas">
                     </div>
-                    <p>Desde trabajos internos del inmueble hasta levantamiento de segundo o tercer piso de la contrucción, siempre ofreciendo la mejor calidad.</p>
-                    <button class="btn"><a href="https://wa.link/zrlr2n" target="_blank">Cotizar</a></button>
-                </div>
+                    <p>Se aplican sobre todo en construcciones de concreto, mortero y mampostería, tales como muros de contención, sótanos o depósitos de agua, por poner algunos ejemplos.</p>
 
+                </div>
+                <button class="btn"><a href="https://wa.link/ad5bet" target="_blank">Cotizar</a></button>
             </div>
         </div>
 
         <div class="contenedor-serv">
             <div class="contenedor-servicios">
                 <div class="servicios">
-                    <h3>Cisternas</h3>
+                    <h3>Prefabricados</h3>
                     <div class="servicios-img">
-                        <img class="amp" src="img/cisterna (2).jpeg" alt="construyendo cisterna">
+                        <img class="amp" src="img/impermeabilizacion_rollo_2.jpeg" alt="construyendo cisterna">
                     </div>
                     <p>No permita que falte nunca el agua en su casa, contamos con amplia experiencia en contrucción de cisternas con rapidez. </p>
-                    <button class="btn"><a href="https://wa.link/zrlr2n" target="_blank">Cotizar</a></button>
                 </div>
-
+                <button class="btn"><a href="https://wa.link/ad5bet" target="_blank">Cotizar</a></button>
             </div>
 
             <div class="contenedor-servicios">
                 <div class="servicios">
-                    <h3>Pintura</h3>
+                    <h3>Ecológicos</h3>
                     <div class="servicios-img">
-                        <img class="amp" src="img/pintura.jpeg" alt="foto de trabajo de pintura">
+                        <img class="amp" src="img/impermeabilizacion (7).jpeg" alt="foto de trabajo de pintura">
                     </div>
-                    <p>Dale un retoque a tu hogar u oficína y haz que luzca mas vivo y llamatico con otra cubierta de pintura, se trabaja sobe cualquier superficie. </p>
-                    <button class="btn"><a href="https://wa.link/zrlr2n" target="_blank">Cotizar</a></button>
+                    <p>Su principal ventaja es que protegen cualquier tipo de techo o azotea de las filtraciones de agua. También cabe resaltar que tienen una durabilidad de entre 3 y 5 años. Se caracteriza por ser azul claro en la cubeta y después pasar
+                        al color blanco una vez aplicado y secado.</p>
                 </div>
-
+                <button class="btn"><a href="https://wa.link/ad5bet" target="_blank">Cotizar</a></button>
             </div>
 
             <div class="contenedor-servicios">
                 <div class="servicios">
-                    <h3>Textuas</h3>
+                    <h3>Fibratados</h3>
                     <div class="servicios-img">
-                        <img class="amp" src="img/textura.jpeg" alt="foto de trabajo de texturas">
+                        <img class="amp" src="img/impermeabilizacion(9).jpeg" alt="foto de trabajo de texturas">
                     </div>
                     <p>Acabos en pasta texturizada, molduras, paladio, colocación de loseta o impermiabilizacion todo lo que quieras detallar a un excelente precio.</p>
-                    <button class="btn"><a href="https://wa.link/zrlr2n" target="_blank">Cotizar</a></button>
-                </div>
 
+                </div>
+                <button class="btn"><a href="https://wa.link/ad5bet" target="_blank">Cotizar</a></button>
             </div>
         </div>
-
 
     </div>
 
@@ -187,138 +186,83 @@
             <h2 class="animacion-arriba">Galería De Trabajos</h2>
         </div>
 
-
         <div class="contenedor-galeria">
             <div class="gallery-container">
                 <div class="gallery-card">
-                    <a href="images/1.jpeg" data-lightbox="roadtrip"><img src="images/1.jpeg" alt="Imagen"></a>
+                    <a href="img/impermeabilizacion (1).jpeg" data-lightbox="roadtrip"><img src="img/impermeabilizacion (1).jpeg" alt="Imagen"></a>
                 </div>
 
                 <div class="gallery-card">
-                    <a href="images/2.jpeg" data-lightbox="roadtrip"><img src="images/2.jpeg" alt="Imagen"></a>
+                    <a href="img/impermeabilizacion_rollo_2.jpeg" data-lightbox="roadtrip"><img src="img/impermeabilizacion_rollo_2.jpeg" alt="Imagen"></a>
                 </div>
 
                 <div class="gallery-card">
-                    <a href="images/3.jpeg" data-lightbox="roadtrip"><img src="images/3.jpeg" alt="Imagen"></a>
+                    <a href="img/impermeabilizacion (3).jpeg" data-lightbox="roadtrip"><img src="img/impermeabilizacion (3).jpeg" alt="Imagen"></a>
                 </div>
 
-                <div class="gallery-card ">
-                    <a href="images/4.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
+                <div class="gallery-card">
+                    <a href="img/impermeabilizacion (4).jpeg" data-lightbox="roadtrip"><img src="img/impermeabilizacion (4).jpeg" alt="Imagen"></a>
                 </div>
 
-                <div class="gallery-card ">
-                    <a href="images/5.jpeg" data-lightbox="roadtrip"><img src="images/5.jpeg" alt="Imagen"></a>
+                <div class="gallery-card">
+                    <a href="img/impermeabilizacion (5).jpeg" data-lightbox="roadtrip"><img src="img/impermeabilizacion (5).jpeg" alt="Imagen"></a>
                 </div>
 
-                <div class="gallery-card ">
-                    <a href="images/6.jpeg" data-lightbox="roadtrip"><img src="images/6.jpeg" alt="Imagen"></a>
+                <div class="gallery-card">
+                    <a href="img/impermeabilizacion(15).jpeg" data-lightbox="roadtrip"><img src="img/impermeabilizacion(15).jpeg" alt="Imagen"></a>
                 </div>
 
-                <div class="gallery-card none">
-                    <a href="images/7.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
+                <div class="gallery-card">
+                    <a href="img/impermeabilizacion_rollo.jpeg" data-lightbox="roadtrip"></a>
                 </div>
 
-                <div class="gallery-card none">
-                    <a href="images/8.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
+                <div class="gallery-card">
+                    <a href="img/impermeabilizacion (6).jpeg" data-lightbox="roadtrip"></a>
                 </div>
 
-                <div class="gallery-card none">
-                    <a href="images/9.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
+                <div class="gallery-card">
+                    <a href="img/impermeabilizacion (7).jpeg" data-lightbox="roadtrip"></a>
                 </div>
 
-                <div class="gallery-card none">
-                    <a href="images/10.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
+                <div class="gallery-card">
+                    <a href="img/impermeabilizacion(8).jpeg" data-lightbox="roadtrip"></a>
                 </div>
 
-                <div class="gallery-card none">
-                    <a href="images/11.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
+                <div class="gallery-card">
+                    <a href="img/impermeabilizacion(9).jpeg" data-lightbox="roadtrip"></a>
                 </div>
 
-                <div class="gallery-card none">
-                    <a href="images/12.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
+                <div class="gallery-card">
+                    <a href="img/impermeabilizacion(10).jpeg" data-lightbox="roadtrip"></a>
                 </div>
 
-                <div class="gallery-card none">
-                    <a href="images/13.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
+                <div class="gallery-card">
+                    <a href="img/impermeabilizacion(11).jpeg" data-lightbox="roadtrip"></a>
                 </div>
 
-                <div class="gallery-card none">
-                    <a href="images/14.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
+                <div class="gallery-card">
+                    <a href="img/impermeabilizacion(12).jpeg" data-lightbox="roadtrip"></a>
                 </div>
 
-                <div class="gallery-card none">
-                    <a href="images/15.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
+                <div class="gallery-card">
+                    <a href="img/impermeabilizacion(13).jpeg" data-lightbox="roadtrip"></a>
                 </div>
 
-                <div class="gallery-card none">
-                    <a href="images/16.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
+                <div class="gallery-card">
+                    <a href="img/impermeabilizacion(14).jpeg" data-lightbox="roadtrip"></a>
                 </div>
 
-                <div class="gallery-card none">
-                    <a href="images/17.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
+                <div class="gallery-card">
+                    <a href="img/impermeabilizacion (6).jpeg" data-lightbox="roadtrip"></a>
                 </div>
 
-                <div class="gallery-card none">
-                    <a href="images/18.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
-                </div>
-
-                <div class="gallery-card none">
-                    <a href="images/19.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
-                </div>
-
-                <div class="gallery-card none">
-                    <a href="images/20.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
-                </div>
-
-                <div class="gallery-card none">
-                    <a href="images/21.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
-                </div>
-
-                <div class="gallery-card none">
-                    <a href="images/22.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
-                </div>
-
-                <div class="gallery-card none">
-                    <a href="images/23.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
-                </div>
-
-                <div class="gallery-card none">
-                    <a href="images/24.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
-                </div>
-
-                <div class="gallery-card none">
-                    <a href="images/25.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
-                </div>
-
-                <div class="gallery-card none">
-                    <a href="images/26.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
-                </div>
-
-                <div class="gallery-card none">
-                    <a href="images/27.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
-                </div>
-
-                <div class="gallery-card none">
-                    <a href="images/28.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
-                </div>
-
-                <div class="gallery-card none">
-                    <a href="images/29.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
-                </div>
-
-                <div class="gallery-card none">
-                    <a href="images/30.jpeg" data-lightbox="roadtrip"><img src="images/4.jpeg" alt="Imagen"></a>
-                </div>
             </div>
 
-            <button class="btn"><a href="https://wa.link/zrlr2n" target="_blank">Pedír Infomración</a></button>
+            <button class="btn"><a href="https://wa.link/ad5bet" target="_blank">Solicita tu cotización ¡Ahora!</a></button>
         </div>
 
-
-
     </div>
 
-    </div>
 
     <section id="contacto" class="contacto">
         <div class="titulo">
@@ -338,7 +282,7 @@
     </section>
 
     <footer class="footer">
-        <h4>Impermeabilizand</h4>
+        <h4>Impermeabilizando</h4>
         <p>Todos los derechos reservados &copy;</p>
         <p class="dev">Desarrollado por <a href="https://wa.link/qhdu26" target="_blank" rel="nofollow">GaloRB</a></p>
     </footer>
