listo para revision

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <div class="servicios-img">
                         <img class="amp" src="img/impermeabilizacion_rollo_2.jpeg" alt="construyendo cisterna">
                     </div>
-                    <p>No permita que falte nunca el agua en su casa, contamos con amplia experiencia en contrucción de cisternas con rapidez. </p>
+                    <p>En este impermeabilizante se recomienda su aplicación en obras civiles donde haya contacto con el agua de lluvia. Se caracterizan por su espesor, durabilidad y elasticidad. Además, su aplicación en frío hace que ofrezcan una gran adherencia.</p>
                 </div>
                 <button class="btn"><a href="https://wa.link/ad5bet" target="_blank">Cotizar</a></button>
             </div>
@@ -159,8 +159,7 @@
                     <div class="servicios-img">
                         <img class="amp" src="img/impermeabilizacion (7).jpeg" alt="foto de trabajo de pintura">
                     </div>
-                    <p>Su principal ventaja es que protegen cualquier tipo de techo o azotea de las filtraciones de agua. También cabe resaltar que tienen una durabilidad de entre 3 y 5 años. Se caracteriza por ser azul claro en la cubeta y después pasar
-                        al color blanco una vez aplicado y secado.</p>
+                    <p>No contienen plomo, tóxicos o cualquier otro tipo de material contaminante para el medio ambiente. Tienen una duración aproximada de 10 años y son muy resistentes a los cambios de temperatura, funcionan muy bien en espacios exteriores.</p>
                 </div>
                 <button class="btn"><a href="https://wa.link/ad5bet" target="_blank">Cotizar</a></button>
             </div>
@@ -171,7 +170,8 @@
                     <div class="servicios-img">
                         <img class="amp" src="img/impermeabilizacion(9).jpeg" alt="foto de trabajo de texturas">
                     </div>
-                    <p>Acabos en pasta texturizada, molduras, paladio, colocación de loseta o impermiabilizacion todo lo que quieras detallar a un excelente precio.</p>
+                    <p>Protegen cualquier tipo de techo o azotea de las filtraciones de agua, tienen una durabilidad de entre 3 y 5 años. Se caracteriza por ser azul claro en la cubeta y después pasar al color blanco una vez aplicado y secado. Se protege
+                        así la vista del que lo está poniendo.</p>
 
                 </div>
                 <button class="btn"><a href="https://wa.link/ad5bet" target="_blank">Cotizar</a></button>
